# Codivus

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  temp_dummy_code.py
.github/workflows/: lint.yml  publish.yml  tests.yml
codereview/: __init__.py  config.py  exceptions.py  reviewer.py
codereview/analyzers/: __init__.py  base.py  complexity.py  deadcode.py  duplication.py  metrics.py
codereview/cli/: __init__.py  diff.py  explain.py  main.py  repo.py  report.py  review.py
codereview/git/: __init__.py  commits.py  diff.py  pull_request.py  repository.py
codereview/llm/: __init__.py  base.py  prompts.py  router.py
codereview/llm/providers/: __init__.py  anthropic.py  azure.py  google.py  mock.py  ollama.py  openai.py  openrouter.py
codereview/models/: __init__.py  issue.py  review.py  score.py  structure.py  suggestion.py  summary.py
codereview/parsers/: __init__.py  base.py  python.py
codereview/performance/: __init__.py  async.py  asynchronous.py  loops.py  memory.py  optimisation.py  profiler.py
codereview/plugins/: __init__.py  base.py  manager.py
codereview/reports/: __init__.py  html.py  json.py  markdown.py  pdf.py  sarif.py
codereview/security/: __init__.py  injection.py  rules.py  scanner.py  secrets.py  sql.py  subprocess.py  xss.py
codereview/style/: __init__.py  best_practices.py  comments.py  formatting.py  naming.py  pep8.py
codereview/utils/: cache.py  logging.py  telemetry.py
codivus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api.md  architecture.md  configuration.md  index.md  installation.md  integrations.md  prompts.md  providers.md  quickstart.md
examples/: basic_review.py  generate_tests.py  review_diff.py  review_repository.py  security_scan.py
tests/: test_cli.py  test_cli_commands.py  test_git.py  test_optimisations.py  test_parser.py  test_performance.py  test_plugins.py  test_providers.py  test_reports.py  test_repository.py  test_review.py  test_security.py  test_static_analysis.py  test_style.py
